# nakasvr

./: .pre-commit-config.yaml  README.md  copy-kernel  launch-kernel  pyproject.toml  requirements.txt
nakasvr/: kernel.py
