[project]
name = "nakasvr"
dynamic = ["version"]
description = "Connect a remote kernel with a local Spyder IDE"
authors = [
    {name = "Simon McIntosh",email = "simon.mcintosh@iter.org"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
  "click",
  "fabric",
  "fsspec",
  "numpy < 2",
  "appdirs",
  "spyder-kernels == 2.5.2",
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
spyder = "<6"

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "0.0.0"
name = "nakasvr"
description = "Connect a remote kernel with a local Spyder IDE"
authors = ["Simon McIntosh <simon.mcintosh@iter.org>"]

[project.scripts]
launch_kernel = "nakasvr.kernel:launch_kernel"
copy_kernel = "nakasvr.kernel:copy_kernel"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"
format = "{base}+{distance}.{commit}"
