[project]
name = "nakasvr"
dynamic = ["version"]
#version = "0.0.0"
description = "Connect a remote kernel with a local Spyder IDE"
authors = [
    {name = "Simon McIntosh",email = "simon.mcintosh@iter.org"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
  "click",
  "fabric",
  "fsspec",
  "numpy < 2",
  "appdirs",
  "spyder-kernels == 2.5.2",
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
spyder = "<6"

[build-system]
requires = [
  "poetry-core @ git+https://github.com/radoering/poetry-core.git@pep621-support",
  "poetry-dynamic-versioning>=1.4"
]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "nakasvr"
version = "0.0.0"

[project.scripts]
launch_kernel = "nakasvr.kernel:launch_kernel"
copy_kernel = "nakasvr.kernel:copy_kernel"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"
format = "{base}+{distance}.{commit}"
